# study_rust_opengl

./: .gitignore  Cargo.toml  README.md
src/: draw_gl.rs  main.rs  mesh_obj.rs
