[package]
name = "study_rust_opengl"
version = "0.1.0"
authors = ["Ryuji Fuchikami <ryuji.fuchikami@nifty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
sdl2 = "0.34.5"
gl = "0.14.0"
cgmath = "0.18.0"
c_str_macro = "1.0.2"
